--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,8 @@
             <li class="nav-item"> <a class="nav-link" href="{% url 'accounts:change_password' %}">Change your Password</a></li>
             <li class="nav-item"> <a class="nav-link" href="{% url 'portfolios:list' %}">Portfolio List</a></li>
             <li class="nav-item"> <a class="nav-link" href="{% url 'portfolios:create' %}">Add New Portfolio</a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'sysManager:check_cargas' %}">Check Cargas</a></li>
+
           {% else %}
             <li class="nav-item"> <a class="nav-link" href="{% url 'accounts:login' %}">LogIn</a></li>
             <li class="nav-item"> <a class="nav-link" href="{% url 'accounts:signup' %}">SignUp</a></li>
