added methods to models in portfolio

--- a/portfolios/templates/portfolios/portfolio_detail.html
+++ b/portfolios/templates/portfolios/portfolio_detail.html
@@ -9,6 +9,8 @@
 
     <h3><a href="{% url 'portfolios:manage' pk=portfolio.pk %}">Manage this Portfolio</a></h3>
     <h3><a href="{% url 'portfolios:rentabilidade' pk=portfolio.pk %}">Ver rentabilidade</a></h3>
+    <h3><a href="{% url 'portfolios:resumo' pk=portfolio.pk %}">Ver resumo</a></h3>
+
 
   </div>
 
