all password recover working. Improved design for login pages

--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 {% load staticfiles %}
 {% load bootstrap3 %}
@@ -14,21 +13,23 @@
     {# fonts #}
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     {# css #}
-    <link rel="stylesheet" href="{% static 'HaluuraApp/css/master.css' %}">
+    <link rel="stylesheet" href="{% static 'HaluuraApp/css/login.css' %}">
 
   </head>
   <body>
+    <div class="container">
 
-      <div class="container">
-        <h1>Log in</h1>
-        <form method="POST">
-          {% csrf_token %}
-          {% bootstrap_form form %}
-          <input type="submit" class="btn btn-default" value="LogIn">
+        <div class="well login-box center-block">
+            <img class="logo" src="{% static 'HaluuraApp/imgs/Logo-Brand-Transp-purple-text.png' %}"></img>
+            <form name="login" method="POST">
+              {% csrf_token %}
+              {% bootstrap_form form %}
+              <input class="btn btn-primary form-space" type="submit"  value="Enviar e-mail de recuperação" />
 
-        </form>
+            </form>
 
-      </div>
+        </div>
 
+    </div>
   </body>
 </html>
