--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -20,23 +20,12 @@
     <div class="container">
 
         <div class="well login-box center-block">
-            <img class="logo" src="{% static 'HaluuraApp/imgs/Logo-Brand-Transp-purple-text.png' %}"></img>
-            <form name="login" method="POST">
-              {% csrf_token %}
-              {% bootstrap_form form %}
-              <input class="btn btn-primary form-space" type="submit"  value="Entrar" />
-
+            <div class="alert alert-success">
+              <p>Prontinho! Agora é só fazer o login.</p>
+            </div>
+            <a href="{% url 'accounts:login' %}" class="btn btn-info"> Fazer Login </a>
             </form>
 
-            <div class="container form-space">
-              <a class="" href="{% url 'accounts:password_reset'%}"> Esqueci a senha </a>
-            </div>
-
-            <div class="loginSignUpSeparator form-space">
-                <span class="textInSeparator">ou</span>
-            </div>
-
-            <a class="btn btn-primary btn-criar form-space" href="{% url 'accounts:signup' %}"> Criar Conta </a>
         </div>
 
     </div>
