--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -24,19 +24,10 @@
             <form name="login" method="POST">
               {% csrf_token %}
               {% bootstrap_form form %}
-              <input class="btn btn-primary form-space" type="submit"  value="Entrar" />
+              <input class="btn btn-primary form-space" type="submit"  value="Trocar Senha" />
 
             </form>
 
-            <div class="container form-space">
-              <a class="" href="{% url 'accounts:password_reset'%}"> Esqueci a senha </a>
-            </div>
-
-            <div class="loginSignUpSeparator form-space">
-                <span class="textInSeparator">ou</span>
-            </div>
-
-            <a class="btn btn-primary btn-criar form-space" href="{% url 'accounts:signup' %}"> Criar Conta </a>
         </div>
 
     </div>
