--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,17 +1,35 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+{% load staticfiles %}
 {% load bootstrap3 %}
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    {# bootstrap #}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {# js bootstrap #}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    {# fonts #}
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    {# css #}
+    <link rel="stylesheet" href="{% static 'HaluuraApp/css/login.css' %}">
 
-{% block content %}
-  <div class="container">
-    <h1>Sign Up</h1>
-    <form method="POST">
-      {% csrf_token %}
-      {% bootstrap_form form %}
-      <input type="submit" class="btn btn-default" value="SignUp">
+  </head>
+  <body>
+    <div class="container">
 
-    </form>
+        <div class="well login-box center-block signup-box">
+            <img class="logo" src="{% static 'HaluuraApp/imgs/Logo-Brand-Transp-purple-text.png' %}"></img>
+            <h3 class="mb-4">Preencha os dados de cadastro</h3>
+            <form name="signup" method="POST">
+              {% csrf_token %}
+              {% bootstrap_form form %}
+              <input class="btn btn-primary form-space" type="submit"  value="Finalizar Cadastro" />
 
-  </div>
+            </form>
+        </div>
 
-
-{% endblock content %}
+    </div>
+  </body>
+</html>
