--- a/portfolios/templates/portfolios/manage_portfolio.html
+++ b/portfolios/templates/portfolios/manage_portfolio.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% load staticfiles %}
 {% load bootstrap3 %}
+{% load joinStr %}
+{% load removeBlank %}
 
 {% block extrahead %}
 <script src="{% static 'HaluuraApp/js/Forms.AtivoFormFilter.js' %}" type="text/javascript"> </script>
@@ -11,32 +14,85 @@
 
 {% block content %}
 
-<form method="post" id="AplicacaoCreateForm" >
-  {% csrf_token %}
-  {{formset.management_form}}
+<div class="container">
 
-    <div class="container" id='{{formset.prefix}}-container'>
-      {% for form in formset %}
-      <div class="{{  formset.prefix }}-{{ forloop.counter0 }}" id="form-block">
-        {% bootstrap_form form  %}
+      <div class="manage-top-header m-3">
+        <div class="row d-lg-flex align-items-center">
+          <div class="col-7">
+            <h1 id="font-dark"> Portfolio: {{ portfolio.nome }} </h1>
+          </div>
+          <div class="col-5">
+            <p class="m-0 p-0" id="font-darkish">Criado em: {{portfolio.data_criacao}}</p>
+          </div>
+        </div>
       </div>
-      {% endfor %}
-    </div>
-    <div class="bottomButtons">
-      <button type="button" id="ativo-add">Add More</button>
-      <input type="submit" class="btn btn-success" value="Save">
-    </div>
 
-</form>
+      <div class="container">
+        <form method="post" id="AplicacaoCreateForm" >
+          {% csrf_token %}
+          {{formset.management_form}}
 
+            <div class="container m-2" id='{{formset.prefix}}-container'>
+                <div class="row">
+                  {% for form in formset %}
+                  <div class="manage-form-frame col-6 m-0">
+                    <div class="{{  formset.prefix }}-{{ forloop.counter0 }} p-3 m-2" id="form-block">
+                      <div class='{{ "form-block-header mb-1 p-0 "|joinStr:form.tipo_ativo.initial }}'>
+                        <div class="row d-lg-flex align-items-center">
+                          {% if form.tipo_ativo.initial == None %}
+                            <div class="col-12">
+                              <h4 class="text-center m-2">
+                                Novo Ativo
+                              </h4>
+                            </div>
+                          {% else %}
+                              <div class="col-1">
+                                {% with form.tipo_ativo.initial|removeBlank as tipoAtivo %}
+                                <img class="m-2" src="{% static 'HaluuraApp/imgs/'|add:tipoAtivo|add:'icon.png' %}" width="30" height="30" alt="">
+                                {% endwith %}
+                              </div>
+                              <div class="col-11">
+                                <h4 class="text-center m-2">
+                                    {{ form.tipo_ativo.initial }}
+                                </h4>
+                              </div>
+                          {% endif %}
+                        </div>
+                      </div>
+                      {% bootstrap_form form  %}
+                    </div>
+                  </div>
+                  {% endfor %}
+                  <div class="manage-form-frame col-6 m-0" id="lastFormFake">
+                    <div class="row">
+                      <div class="p-3 m-2 add-ativo lastFormFake" id="form-block">
+                        <div class="row">
+                          <div class="col">
+                            <h3 class="text-center" id="font-darkish">Adicionar novo ativo</h3>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col">
+                            <button type="button" class="btn btn-dark btn-block btn-lg" id="ativo-add">Clique Aqui (+)</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="bottomButtons">
+              <input type="submit" class="btn btn-success" value="Save">
+            </div>
+        </form>
+    </div>
+</div>
 <!-- Templates and Scripts -->
 
 <script type="text/javascript">
   // Post load actions
   $('div#form-block').DisplayCorrectFields();
-
   AutoFilterForm();
-  $('#AplicacaoCreateForm div.container').RemoveLinks({
+  $('div#form-block').slice(0,-1).RemoveLinks({
     prefix:'{{ formset.prefix }}',
     containerId: '{{ formset.prefix }}-container',
   });
@@ -51,7 +107,7 @@
   });
   $('#ativo-add').click(function(){
     AutoFilterForm();
-    $('#AplicacaoCreateForm div.container').RemoveLinks({
+    $('div#form-block').not($('.lastFormFake')).slice(0,-1).last().RemoveLinks({
       prefix:'{{ formset.prefix }}',
       containerId: '{{ formset.prefix }}-container',
     });
@@ -59,10 +115,22 @@
 </script>
 
 <div class="teste" hidden id='aplicacao_set-template'>
-  <div class="aplicacao_set-__prefix__" id="form-block">
-      {% bootstrap_form formset.empty_form %}
+  <div class="aplicacao_set-__prefix__ manage-form-frame col-6 m-0">
+    <div class="p-3 m-2" id="form-block">
+      <div class="form-block-header mb-1 p-0">
+        <div class="row d-lg-flex align-items-center">
+            <div class="col-12">
+              <h4 class="text-center m-2">
+                Novo Ativo
+              </h4>
+            </div>
+        </div>
+      </div>
+     {% bootstrap_form formset.empty_form %}
+    </div>
   </div>
 </div>
+
 
 
 {{ formset.media }}
