--- a/static/HaluuraApp/css/login.css
+++ b/static/HaluuraApp/css/login.css
@@ -1,12 +1,11 @@
 
 body {
-  background-color: #13021C;
-  color: #DCDCDC;
+  background-color: #8866f4;
+  color: #6c7378;;
   font-family: 'Poppins', sans-serif;
 }
 
 .login-box {
-
   text-align: center;
   width: 550px;
   height: auto;
@@ -15,9 +14,20 @@ body {
   margin-right: auto;
   margin-left: auto;
   margin-top: 20%;
-  border: 2px solid #fb3769;
-  border-radius: 10px;
+  border: 2px solid #5f31f3;
+  border-radius: 14px;
+  box-shadow: 4px 4px #41346d;
+}
 
+.signup-box {
+  width: 850px !important;
+  margin-top: 3% !important;
+}
+
+.help-block {
+  font-size: 0.9rem !important;
+  color: #aaa2ae !important;
+  text-align: left !important;
 }
 
 .logo {
