--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -77,7 +77,7 @@ a:hover {
 }
 
 .card-top-legend {
-  
+
 }
 
 .c-title{
@@ -114,12 +114,74 @@ a:hover {
   background-color: #830b29 ;
 }
 
+.manage-top-header{
+  border-bottom: 3px solid #fb3769;
+}
+
+.manage-form-frame {
+  width: 98%;
+}
+
+#form-block {
+  width: 98%;
+  height: 620px;
+  background-color: white ;
+  box-shadow: 2px 2px grey;
+  border-radius: 15px;
+}
+
+.form-block-header {
+  background-color: #290a3a;
+  border-radius: 10px;
+  width: 100%;
+  color: white;
+  height: 40px;
+}
+
+.add-ativo{
+  vertical-align: middle;
+  height: 100%;
+}
+
+.add-ativo-conteudo{
+  display: block;
+}
+
+.FII {
+  background-color: #641b44 !important ;
+}
+
+.Ações{
+  background-color: #086041 !important;
+}
+
+.TesouroDireto{
+  background-color: #7c7c21 !important;
+}
+
+.delete-row{
+
+}
+
+.select2-selection__rendered{
+  line-height: 20px !important;
+  font-size: 1rem !important;
+}
+
+.select2-selection{
+  height:  calc(1.5em + .75rem + 2px) !important;
+  border: 1px solid #ced4da !important;
+}
+
+.form-control {
+}
+
 /* ##### NAVBAR ##### */
 
 .navbar-custom {
   background-color: #290a3a ;
   font-weight: 800;
-  font-size: 17px;
+  font-size: 20px;
 
 }
 
