--- a/portfolios/templates/portfolios/manage_portfolio.html
+++ b/portfolios/templates/portfolios/manage_portfolio.html
@@ -10,6 +10,9 @@
 <script src="{% static 'HaluuraApp/js/Forms.RemoveLinks.js' %}" type="text/javascript"> </script>
 <script src="{% static 'HaluuraApp/js/Forms.inline-form-add.js' %}" type="text/javascript"> </script>
 <script src="{% static 'HaluuraApp/js/Forms.DisplayCorrectFields.js' %}" type="text/javascript"> </script>
+{# Fengyuan Chen's Datepicker #}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
@@ -79,7 +82,8 @@
                       </div>
                     </div>
                   </div>
-            </div>
+                </div>
+              </div>
             <div class="bottomButtons">
               <input type="submit" class="btn btn-success" value="Save">
             </div>
@@ -90,6 +94,15 @@
 
 <script type="text/javascript">
   // Post load actions
+  $(function () {
+    $('input[id*="data_aplicacao"]').datepicker({
+        format:"dd/mm/yyyy",
+        language: "pt-BR",
+        locale: "pt-br",
+        daysMin: ['Do', 'Se', 'Te', 'Qa', 'Qi', 'Se', 'Sa'],
+        monthsShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+      });
+  });
   $('div#form-block').DisplayCorrectFields();
   AutoFilterForm();
   $('div#form-block').slice(0,-1).RemoveLinks({
@@ -110,6 +123,15 @@
     $('div#form-block').not($('.lastFormFake')).slice(0,-1).last().RemoveLinks({
       prefix:'{{ formset.prefix }}',
       containerId: '{{ formset.prefix }}-container',
+    });
+    $(function () {
+      $('input[id*="data_aplicacao"]').datepicker({
+        format:'dd/mm/yyyy',
+        language: "pt-BR",
+        locale: "pt-br",
+        daysMin: ['Do', 'Se', 'Te', 'Qa', 'Qi', 'Se', 'Sa'],
+        monthsShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+        });
     });
   });
 </script>
